--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -30,11 +30,14 @@
   }
 
   &--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
+    background-color: transparent;
+    color: $color-white;
+    border-color: $color-white;
+    border-width: thin;
+    border-style: solid;
 
     &::after{
-      background-color: $color-white;
+      background-color: transparent;
     }
   }
 
