--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,8 +9,9 @@
 
 
 @import "components/button";
+@import "components/link";
 @import "components/navbar";
-@import "components/overons";
+
 
 @import "layout/header";
 @import "layout/grid";
