--- a/sass/components/_link.scss
+++ b/sass/components/_link.scss
@@ -14,6 +14,7 @@
   &:hover{
     text-decoration: underline;
   }
+
 }
 
 .link-icon{
@@ -32,4 +33,47 @@
     padding-left: 2rem;
     font-size: 3rem;
   }
+  &--3{
+    padding-left: 2rem;
+    font-size: 2rem;
+  }
+}
+
+
+.heading-tertiary{
+  text-decoration: none;
+  color: $color-blue;
+  line-height: 5rem;
+  font-size: 4rem;
+  display:block;
+  text-align: left;
+  &__small{
+    font-size: 2rem;
+  }
+}
+
+.cardsparagraph{
+  font-size: 1.4rem;
+  font-weight: 900;
+  color: $color-black;
+  text-align:left;
+
+  &:not(:last-child){
+    margin-bottom: 2rem;
+  }
+}
+
+.logopara{
+  font-size: 7rem;
+  font-weight: 900;
+  color: $color-white;
+  text-transform: uppercase;
+  padding-top: 22rem;
+}
+
+.paraend{
+  color: $color-white;
+  font-size: $default-font-size;
+  font-weight: 200;
+  bottom: 10%;
 }
