--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,11 +9,13 @@
 
 
 @import "components/button";
+@import "components/cards";
 @import "components/link";
 @import "components/navbar";
 
 
 @import "layout/header";
+@import "layout/footer";
 @import "layout/grid";
 
 @import "pages/home";
