--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,13 +1,18 @@
 // Section overons
-.photo1{
-  height: 60rem;
-  transform: translateY(-8rem);
+
+.sizephoto{
+  height: 100%;
+
+  &__photo1{
+    width: 70%;
+    transform: translateY(-12%);
+  }
 }
 
 // Section onze diebsten
 .onzed{
   background-image: url("https://images.unsplash.com/photo-1497316283501-6e0246fc5aa0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1910&q=80");
-  height: 70rem;
+  // height: 70rem;
   background-size: cover;
 
 }
@@ -28,7 +33,6 @@
     rgba($color-blue,0.9),
     rgba($color-blue,0.9)),
     url("https://images.unsplash.com/photo-1497366754035-f200968a6e72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-  height: 80vh;
   background-size: cover;
 
 }
@@ -36,21 +40,80 @@
 // Section cultuur
 .cultuur{
   background-image: url("https://images.unsplash.com/photo-1450037649614-fd8503521870?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1919&q=80");
-  height: 70vh;
   background-size: cover;
+  height: 100%;
 }
 
-.photo2{
-  height:40rem;
-  transform: translate(-4rem, 5rem);
+.sizing{
+  height: 100%;
+
+
+  &__photo2{
+  width:105%;
+  transform: translate(-6%, 11%);
+  }
+
+  &__photo3{
+    width: 50%;
+    transform: translate(95%, 41%);
+  }
+
+  &__photo4{
+    width: 90%;
+  }
 }
 
-.photo3{
-  height: 38rem;
-  transform: translate(32rem, 13rem);
+
+
+
+// Section vacancies
+
+.vacancies{
 }
 
-.photo4{
-  height: 30rem;
-  transform: translateX(10rem);
+
+.circle {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  font-size: $default-font-size;
+  color: $color-white;
+  line-height: 5rem;
+  text-align: center;
+  background: $color-blue;
+}
+
+// Footer
+.footer{
+  height:100%;
+
+  &__size {
+    background: $color-blue;
+    background-size: 80%;
+  }
+}
+
+.navlist1 {
+  list-style-type: none;
+  font-weight: 800;
+  margin: 0;
+  padding: 0 10rem;
+  overflow: hidden;
+  font-size: 2rem;
+  margin-top: 3%;
+
+  &__el1{
+    float: left;
+    margin-left: 8%;
+  }
+
+  &__el1 a {
+    display: block;
+    color: $color-white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+
 }
