--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
     opacity: 1;
     transform: translateY(0); } }
 
-.carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__prev > label:nth-child(5), .carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__next > label:nth-child(2), .carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__prev > label:nth-child(1), .carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__next > label:nth-child(3), .carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__prev > label:nth-child(2), .carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__next > label:nth-child(4), .carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__prev > label:nth-child(3), .carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__next > label:nth-child(5), .carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__prev > label:nth-child(4), .carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__next > label:nth-child(1) {
+.carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__prev > label:nth-child(5), .carousel > input[type="radio"]:nth-child(1):checked ~ .carousel__next > label:nth-child(2), .carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__prev > label:nth-child(1), .carousel > input[type="radio"]:nth-child(2):checked ~ .carousel__next > label:nth-child(3), .carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__prev > label:nth-child(2), .carousel > input[type="radio"]:nth-child(3):checked ~ .carousel__next > label:nth-child(4), .carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__prev > label:nth-child(3), .carousel > input[type="radio"]:nth-child(4):checked ~ .carousel__next > label:nth-child(5), .carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__prev > label:nth-child(4), .carousel > input[type="radio"]:nth-child(5):checked ~ .carousel__next > label:nth-child(1), .carousel1 > input[type="radio"]:nth-child(1):checked ~ .carousel1__prev1 > label:nth-child(0), .carousel1 > input[type="radio"]:nth-child(1):checked ~ .carousel1__next1 > label:nth-child(2), .carousel1 > input[type="radio"]:nth-child(2):checked ~ .carousel1__prev1 > label:nth-child(1), .carousel1 > input[type="radio"]:nth-child(2):checked ~ .carousel1__next1 > label:nth-child(3), .carousel1 > input[type="radio"]:nth-child(3):checked ~ .carousel1__prev1 > label:nth-child(2), .carousel1 > input[type="radio"]:nth-child(3):checked ~ .carousel1__next1 > label:nth-child(4), .carousel1 > input[type="radio"]:nth-child(4):checked ~ .carousel1__prev1 > label:nth-child(3), .carousel1 > input[type="radio"]:nth-child(4):checked ~ .carousel1__next1 > label:nth-child(5), .carousel1 > input[type="radio"]:nth-child(5):checked ~ .carousel1__prev1 > label:nth-child(4), .carousel1 > input[type="radio"]:nth-child(5):checked ~ .carousel1__next1 > label:nth-child(1) {
   opacity: 1 !important;
   z-index: 3; }
 
@@ -62,7 +62,9 @@ body {
     display: block;
     font-size: 6rem;
     font-weight: 400;
-    line-height: 7rem; }
+    line-height: 7rem;
+    animation-name: moveInLeft;
+    animation-duration: 1s; }
     .heading-primary--main--black {
       color: #000; }
 
@@ -100,6 +102,9 @@ body {
 
 .u-margin-top-big {
   margin-top: 8rem !important; }
+
+.u-margin-bottom-bigger {
+  margin-bottom: 14rem !important; }
 
 .btn, .btn:link, .btn:visited {
   text-decoration: none;
@@ -454,8 +459,140 @@ body {
   background-image: linear-gradient(to right bottom, rgba(82, 106, 207, 0.9), rgba(82, 106, 207, 0.9)), url("https://images.unsplash.com/photo-1497366754035-f200968a6e72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
   background-size: cover; }
 
+.horizontalcar {
+  max-height: 17rem; }
+
+.carousel1 {
+  width: 100%;
+  position: relative;
+  overflow: hidden; }
+  .carousel1 > input[type="radio"] {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    top: 0; }
+    .carousel1 > input[type="radio"]:checked ~ .carousel1__items1 .carousel1__item1,
+    .carousel1 > input[type="radio"]:checked ~ .carousel1__prev1 > label,
+    .carousel1 > input[type="radio"]:checked ~ .carousel1__next1 > label {
+      opacity: 0; }
+    .carousel1 > input[type="radio"]:nth-child(1):checked ~ .carousel1__items1 .carousel1__item1:nth-child(1) {
+      opacity: 1; }
+    .carousel1 > input[type="radio"]:nth-child(1):checked ~ .carousel1__nav1 > label:nth-child(1) {
+      background: #ccc;
+      cursor: default;
+      pointer-events: none; }
+    .carousel1 > input[type="radio"]:nth-child(2):checked ~ .carousel1__items1 .carousel1__item1:nth-child(2) {
+      opacity: 1; }
+    .carousel1 > input[type="radio"]:nth-child(2):checked ~ .carousel1__nav1 > label:nth-child(2) {
+      background: #ccc;
+      cursor: default;
+      pointer-events: none; }
+    .carousel1 > input[type="radio"]:nth-child(3):checked ~ .carousel1__items1 .carousel1__item1:nth-child(3) {
+      opacity: 1; }
+    .carousel1 > input[type="radio"]:nth-child(3):checked ~ .carousel1__nav1 > label:nth-child(3) {
+      background: #ccc;
+      cursor: default;
+      pointer-events: none; }
+    .carousel1 > input[type="radio"]:nth-child(4):checked ~ .carousel1__items1 .carousel1__item1:nth-child(4) {
+      opacity: 1; }
+    .carousel1 > input[type="radio"]:nth-child(4):checked ~ .carousel1__nav1 > label:nth-child(4) {
+      background: #ccc;
+      cursor: default;
+      pointer-events: none; }
+    .carousel1 > input[type="radio"]:nth-child(5):checked ~ .carousel1__items1 .carousel1__item1:nth-child(5) {
+      opacity: 1; }
+    .carousel1 > input[type="radio"]:nth-child(5):checked ~ .carousel1__nav1 > label:nth-child(5) {
+      background: #ccc;
+      cursor: default;
+      pointer-events: none; }
+  .carousel1__items1 {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    width: 100%;
+    height: 600px;
+    position: relative; }
+  .carousel1__item1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: opacity 1s;
+    -webkit-transition: opacity 1s; }
+    .carousel1__item1 img {
+      width: 100%;
+      height: 100%;
+      max-height: 30%;
+      vertical-align: middle;
+      border-radius: 3px; }
+  .carousel1__prev1 > label, .carousel1__next1 > label {
+    border: 1px solid #999;
+    border-radius: 50%;
+    cursor: pointer;
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 12%;
+    transform: translateY(-5%);
+    -webkit-transform: translateY(-5%);
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    opacity: 0;
+    z-index: 2; }
+    .carousel1__prev1 > label:hover, .carousel1__prev1 > label:focus, .carousel1__next1 > label:hover, .carousel1__next1 > label:focus {
+      opacity: .5 !important; }
+    .carousel1__prev1 > label:before, .carousel1__prev1 > label:after, .carousel1__next1 > label:before, .carousel1__next1 > label:after {
+      content: "";
+      position: absolute;
+      width: inherit;
+      height: inherit; }
+    .carousel1__prev1 > label:before, .carousel1__next1 > label:before {
+      background: linear-gradient(to top, #999 0%, #999 10%, rgba(51, 51, 51, 0) 10%), linear-gradient(to left, #999 0%, #999 10%, rgba(51, 51, 51, 0) 10%);
+      width: 60%;
+      height: 60%;
+      top: 20%; }
+  .carousel1__prev1 > label {
+    left: 2%; }
+    .carousel1__prev1 > label:before {
+      left: 35%;
+      top: 20%;
+      transform: rotate(135deg);
+      -webkit-transform: rotate(135deg); }
+  .carousel1__next1 > label {
+    right: 2%; }
+    .carousel1__next1 > label:before {
+      left: 10%;
+      transform: rotate(315deg);
+      -webkit-transform: rotate(315deg); }
+  .carousel1__nav1 {
+    position: absolute;
+    bottom: 70%;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    z-index: 3; }
+    .carousel1__nav1 > label {
+      border: 1px solid #999;
+      display: inline-block;
+      border-radius: 50%;
+      cursor: pointer;
+      margin: 0 .125%;
+      width: 20px;
+      height: 20px; }
+
+.container1 {
+  width: 80%;
+  min-width: 80%;
+  margin: 5rem auto;
+  max-height: 12rem;
+  transform: translateY(-14rem);
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+
 .cultuur {
-  background-image: url("https://images.unsplash.com/photo-1450037649614-fd8503521870?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1919&q=80");
+  background-image: url("https://media.giphy.com/media/l2Sqf1fbj1qrmaJ6E/giphy.gif");
   background-size: cover;
   height: 100%; }
 
