--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -196,3 +196,197 @@
     }
   }
 }
+
+// horizontal
+@mixin carousel1($items1, $animation: 'default') {
+  .carousel1 {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+
+    > input[type="radio"] {
+      position: absolute;
+      left: 0;
+      opacity: 0;
+      top: 0;
+
+      &:checked {
+        ~ .carousel1__items1 .carousel1__item1,
+        ~ .carousel1__prev1 > label,
+        ~ .carousel1__next1 > label {
+          opacity: 0;
+        }
+      }
+
+      @for $i from 1 through $items1 {
+        &:nth-child(#{$i}) {
+          &:checked {
+            ~ .carousel1__items1 .carousel1__item1 {
+              @if $animation == 'default' {
+                &:nth-child(#{$i}) {
+                  opacity: 1;
+                }
+              }
+            }
+
+            ~ .carousel1__prev1 {
+              > label {
+                @if $i == 11 {
+                  &:nth-child(#{$items}) {
+                    @extend %animation-default;
+                  }
+                } @else if $i == $items1 {
+                  &:nth-child(#{$items1 - 1}) {
+                    @extend %animation-default;
+                  }
+                } @else {
+                  &:nth-child(#{$i - 1}) {
+                    @extend %animation-default;
+                  }
+                }
+              }
+            }
+
+            ~ .carousel1__next1 {
+              > label {
+                @if $i == $items1 {
+                  &:nth-child(1) {
+                    @extend %animation-default;
+                  }
+                } @else {
+                  &:nth-child(#{$i + 1}) {
+                    @extend %animation-default;
+                  }
+                }
+              }
+            }
+
+            ~ .carousel1__nav1 {
+              > label {
+                &:nth-child(#{$i}) {
+                  background: #ccc;
+                  cursor: default;
+                  pointer-events: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &__items1 {
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+      width: 100%;
+      height: 600px;
+      position: relative;
+    }
+
+    &__item1 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      transition: opacity 1s;
+      -webkit-transition: opacity 1s;
+
+
+      img {
+        width: 100%;
+        height: 100%;
+        max-height: 30%;
+        vertical-align: middle;
+        border-radius: 3px;
+      }
+    }
+
+    &__prev1,
+    &__next1 {
+      > label {
+        border: 1px solid $color-grey-dark-2;
+        border-radius: 50%;
+        cursor: pointer;
+        display: block;
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        top: 12%;
+        transform: translateY(-5%);
+        -webkit-transform: translateY(-5%);
+        transition: all .3s ease;
+        -webkit-transition: all .3s ease;
+        opacity: 0;
+        z-index: 2;
+
+        &:hover,
+        &:focus {
+          opacity: .5 !important;
+        }
+
+        &:before,
+        &:after {
+          content: "";
+          position: absolute;
+          width: inherit;
+          height: inherit;
+        }
+
+        &:before {
+          background: linear-gradient(to top, $color-grey-dark-2 0%, $color-grey-dark-2 10%, rgba(51, 51, 51, 0) 10%),
+                      linear-gradient(to left, $color-grey-dark-2 0%, $color-grey-dark-2 10%, rgba(51, 51, 51, 0) 10%);
+          width: 60%;
+          height: 60%;
+          top: 20%;
+        }
+      }
+    }
+
+    &__prev1 {
+      > label {
+        left: 2%;
+
+        &:before {
+          left: 35%;
+          top: 20%;
+          transform: rotate(135deg);
+          -webkit-transform: rotate(135deg);
+        }
+      }
+    }
+
+    &__next1 {
+      > label {
+        right: 2%;
+
+        &:before {
+          left: 10%;
+          transform: rotate(315deg);
+          -webkit-transform: rotate(315deg);
+        }
+      }
+    }
+
+    &__nav1 {
+      position: absolute;
+      bottom: 70%;
+      left: 0;
+      text-align: center;
+      width: 100%;
+      z-index: 3;
+
+      > label {
+        border: 1px solid $color-grey-dark-2;
+        display: inline-block;
+        border-radius: 50%;
+        cursor: pointer;
+        margin: 0 .125%;
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
+}
